[gd_scene load_steps=16 format=3 uid="uid://cllijaxrf4udu"]

[ext_resource type="PackedScene" path="res://scenes/battlefield/battlefield_3d.tscn" id="1_battlefield"]
[ext_resource type="Script" uid="uid://b0pmsqluoj531" path="res://scripts/core/game_controller_3d.gd" id="2_game_controller"]
[ext_resource type="Script" uid="uid://dab1q327uw447" path="res://scripts/core/summoner_3d.gd" id="3_summoner"]
[ext_resource type="Script" uid="uid://pvurqohx5fjd" path="res://scripts/cards/card.gd" id="4_card"]
[ext_resource type="Resource" path="res://resources/cards/soldier_card_3d.tres" id="5_soldier"]
[ext_resource type="Script" uid="uid://d1mqkngn7lovi" path="res://scripts/ui/hand_ui.gd" id="7_hand_ui"]
[ext_resource type="Script" uid="uid://bt4v6ur0kkioe" path="res://scripts/ui/battlefield_drop_zone.gd" id="8_drop_zone"]
[ext_resource type="Script" uid="uid://cxsbo6o2n1de5" path="res://scripts/core/base_3d.gd" id="9_base"]
[ext_resource type="Script" uid="uid://buwk0u38u574j" path="res://scripts/core/simple_ai.gd" id="10_ai"]

[sub_resource type="Environment" id="Environment_1"]
background_mode = 1
background_color = Color(0.53, 0.81, 0.98, 1)
ambient_light_source = 2
ambient_light_color = Color(1, 1, 1, 1)
ambient_light_energy = 0.5

[sub_resource type="BoxShape3D" id="BoxShape3D_1"]
size = Vector3(2, 4, 2)

[sub_resource type="BoxMesh" id="BoxMesh_player_base"]
size = Vector3(2, 4, 2)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_player"]
albedo_color = Color(0.831, 0.647, 0.455, 1)

[sub_resource type="BoxMesh" id="BoxMesh_enemy_base"]
size = Vector3(2, 4, 2)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_enemy"]
albedo_color = Color(0.353, 0.482, 0.549, 1)

[node name="TestGame3D" type="Node3D"]
script = ExtResource("2_game_controller")

[node name="Battlefield3D" parent="." instance=ExtResource("1_battlefield")]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_1")

[node name="PlayerSummoner" type="Node3D" parent="." groups=["player_summoners", "summoners"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -10, 1, 0)
script = ExtResource("3_summoner")
starting_deck = Array[ExtResource("4_card")]([ExtResource("5_soldier"), ExtResource("5_soldier"), ExtResource("5_soldier"), ExtResource("5_soldier")])

[node name="PlayerBase" type="StaticBody3D" parent="." groups=["player_base"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -10, 2, 0)
script = ExtResource("9_base")
max_hp = 1000.0

[node name="CollisionShape3D" type="CollisionShape3D" parent="PlayerBase"]
shape = SubResource("BoxShape3D_1")

[node name="MeshInstance3D" type="MeshInstance3D" parent="PlayerBase"]
transform = Transform3D(0.69176525, 0, 0.7221226, 0, 1, 0, -0.7221226, 0, 0.69176525, 4.3040953, 0, 5.608644)
mesh = SubResource("BoxMesh_player_base")
surface_material_override/0 = SubResource("StandardMaterial3D_player")

[node name="EnemySummoner" type="Node3D" parent="." groups=["enemy_summoners", "summoners"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 10, 1, 0)
script = ExtResource("3_summoner")
team = 1
starting_deck = Array[ExtResource("4_card")]([ExtResource("5_soldier"), ExtResource("5_soldier"), ExtResource("5_soldier"), ExtResource("5_soldier")])

[node name="SimpleAI" type="Node" parent="EnemySummoner"]
script = ExtResource("10_ai")
play_interval_min = 3.0
play_interval_max = 6.0

[node name="EnemyBase" type="StaticBody3D" parent="." groups=["enemy_base"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 10, 2, 0)
script = ExtResource("9_base")
max_hp = 1000.0
team = 1

[node name="CollisionShape3D" type="CollisionShape3D" parent="EnemyBase"]
shape = SubResource("BoxShape3D_1")

[node name="MeshInstance3D" type="MeshInstance3D" parent="EnemyBase"]
transform = Transform3D(0.6566857, 0, -0.7693438, 0, 1, 0, 0.79084134, 0, 0.638835, -5.1994944, 0.014033318, -5.9879656)
mesh = SubResource("BoxMesh_enemy_base")
surface_material_override/0 = SubResource("StandardMaterial3D_enemy")

[node name="UI" type="CanvasLayer" parent="."]

[node name="BattlefieldDropZone" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("8_drop_zone")

[node name="TimerLabel" type="Label" parent="UI"]
offset_left = 20.0
offset_top = 20.0
offset_right = 200.0
offset_bottom = 60.0
theme_override_font_sizes/font_size = 32
text = "03:00"

[node name="PlayerManaLabel" type="Label" parent="UI"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -80.0
offset_right = 200.0
offset_bottom = -40.0
grow_vertical = 0
theme_override_font_sizes/font_size = 24
text = "Mana: 10/10"

[node name="PlayerHPLabel" type="Label" parent="UI"]
offset_left = 20.0
offset_top = 60.0
offset_right = 300.0
offset_bottom = 100.0
theme_override_colors/font_color = Color(0.831, 0.647, 0.455, 1)
theme_override_font_sizes/font_size = 24
text = "Player Base: 1000/1000"

[node name="EnemyHPLabel" type="Label" parent="UI"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -300.0
offset_top = 60.0
offset_right = -20.0
offset_bottom = 100.0
grow_horizontal = 0
theme_override_colors/font_color = Color(0.353, 0.482, 0.549, 1)
theme_override_font_sizes/font_size = 24
text = "Enemy Base: 1000/1000"
horizontal_alignment = 2

[node name="GameOverLabel" type="Label" parent="UI"]
process_mode = 3
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -100.0
offset_right = 300.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 72
text = "GAME OVER"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HandUI" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -400.0
offset_top = -200.0
offset_right = 400.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0
script = ExtResource("7_hand_ui")

[node name="DebugBG" type="ColorRect" parent="UI/HandUI"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.2, 0.2, 0.3, 0.5)

[connection signal="game_ended" from="." to="." method="_on_game_ended"]
[connection signal="time_updated" from="." to="." method="_on_time_updated"]
